--- a/package.json
+++ b/package.json
@@ -45,9 +45,15 @@
   },
   "homepage": "https://github.com/Crinax/ranging#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "mocha": "^9.0.3"
+    "mocha": "^9.0.3",
+    "rollup": "^2.56.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.4.2"
   }
 }
