--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Ranging helper classes based on iterators",
   "main": "range",
   "scripts": {
-    "test": "mocha tests/*.test.js"
+    "test": "mocha tests/*.test.js",
+    "build": "npx rollup -c",
+    "watch": "npx rollup -c -w"
   },
   "keywords": [
     "ranges",
@@ -54,6 +56,7 @@
     "mocha": "^9.0.3",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.2"
   }
 }
