--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ranging",
   "version": "1.1.0",
   "description": "Ranging helper classes based on iterators",
-  "main": "range",
+  "main": "range.js",
+  "module": "range.mjs",
+  "typings": "range.d.ts",
   "scripts": {
     "test": "mocha tests/*.test.js",
     "build": "npx rollup -c",
