--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "declaration": true,
+    "outDir": "types"
   }
 }
